--- a/client/client.html
+++ b/client/client.html
@@ -7,17 +7,63 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
   <script type="text/babel">
     const parseJSON = (xhr, content) => {
-      const obj = JSON.parse(xhr.response);
-      console.dir(obj);
+      if(xhr.response && xhr.getResponseHeader('Content-Type') === 'application/json'){
+        const obj = JSON.parse(xhr.response);
+        console.dir(obj);
+
+        if(obj.message){
+          content.innerHTML += `<p>${obj.message}</p>`
+        }
+      }
     };
 
     const handleResponse = (xhr) => {
       const content = document.querySelector('#content');
       
+      switch(xhr.status){
+        case 200:
+          content.innerHTML = '<b>Success</b>';
+          break;
+        case 201:
+          content.innerHTML = '<b>Created</b>';
+          break;
+        case 204:
+          content.innerHTML = '<b>Updated</b>';
+          break;
+        case 400:
+          content.innerHTML = '<b>Bad request</b>';
+          break;
+        default:
+          content.innerHTML = '<b>Error code not implemented by client</b>';
+          break;
+      }
+
+      parseJSON(xhr, content);
+
     };
 
     const sendPost = (e, nameForm) => {
+      e.preventDefault();
 
+      const nameAction = nameForm.getAttribute('action');
+      const nameMethod = nameForm.getAttribute('method');
+
+      const nameField = nameForm.querySelector('#nameField');
+      const ageField = nameForm.querySelector('#ageField');
+
+      const xhr = new XMLHttpRequest();
+      xhr.open(nameMethod, nameAction);
+
+      xhr.setRequestHeader('Accept', 'application/json');
+      xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+      //    /getUser?name=Jeb&age=2
+
+      xhr.onload = () => handleResponse(xhr);
+
+      const formData = `name=${nameField.value}&age=${ageField.value}`;
+      xhr.send(formData);
+
+      return false;
     };
 
     const init = () => {
